# ShapeNuss

./: CMakeLists.txt  README.md
NussBar/: CMakeLists.txt  NussBar.py
